--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "sequelize": "^6.37.5"
+    "mysql2": "^3.11.4",
+    "sequelize": "^6.37.5",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
