--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.0",
     "mysql2": "^3.11.4",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.2"
