--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mongoose": "^8.8.0",
     "mysql2": "^3.11.4",
     "sequelize": "^6.37.5",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "websocket": "^1.0.35",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
